<resources>
    <string name="app_name">Fyber Mobile API</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="offers">Offers</string>
    <string name="others">Others</string>
    <string name="refresh">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uid">Uid</string>
    <string name="apikey">Api Key</string>
    <string name="appid">Appid</string>
    <string name="pub0">Pub0</string>
    <string name="getoffer">Gett Offer</string>
    <string name="title_dialog_inputdataapi">Input Api Data</string>
    <string name="info_about_api_data">Info about Fyber Offer api.</string>
    <string name="please_wait">Please wait.</string>
    <string name="offer_title">On Device Research Survey</string>
    <string name="offer_types">Registration | Download</string>
    <string name="offer_required_actions">Signup and deposit a minimum of $15.</string>
    <string name="no_offers">‘No offers’ :(</string>
    <string name="getcoins">Get coins</string>
    <string name="network_not_available">Network not available.</string>
</resources>
