<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/fyber_logo" />

        <!-- Uid Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edittext_input_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uid"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!-- Api Key Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edittext_input_apikey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apikey"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!-- Appid Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edittext_input_appid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appid"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <!-- Pub0 Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edittext_input_pub0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pub0"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_getoffer"
            style="@style/FirebaseUI.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/getoffer" />

        <TextView
            android:id="@+id/textView_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center|bottom"
            android:text="@string/info_about_api_data"
            android:textSize="16dip" />

    </LinearLayout>
</ScrollView>