<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativLayout_item_offer"
        android:layout_gravity="bottom"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/relativLayout_item_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/md_keylines"
        android:paddingRight="@dimen/md_keylines"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imageView_offer_thumbnail"
            android:layout_width="@dimen/avator_size"
            android:layout_height="@dimen/avator_size"
            android:scaleType="centerCrop"
            tools:src="@drawable/dash_square" />

        <TextView
            android:id="@+id/textView_offer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_toRightOf="@+id/imageView_offer_thumbnail"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="sans-serif-medium"
            android:paddingRight="35dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            tools:text="@string/offer_title" />


        <TextView
            android:id="@+id/textView_item_offer_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_offer_title"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_toRightOf="@+id/imageView_offer_thumbnail"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:paddingRight="@dimen/md_keylines"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/list_body"
            tools:text="@string/offer_types" />

        <TextView
            android:id="@+id/textView_item_offer_required_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_item_offer_types"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_toRightOf="@+id/imageView_offer_thumbnail"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingRight="50dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            tools:text="@string/offer_required_actions" />

        <TextView
            android:id="@+id/textView_payout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_item_offer_types"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/accent"
            android:fontFamily="sans-serif-medium"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#ffffff"
            android:textSize="17sp"
            tools:text="120" />
    </RelativeLayout>


</RelativeLayout>